changed behavior for corner cases, added tests, fixed readme

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,25 @@ isort = "^5.8.0"
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.black]
+line-length = 88
+target-version = ["py36", "py37", "py38"]
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | \.vscode
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
+
 [tool.isort]
 profile = "black"
 skip = ".eggs,.pip-cache,.poetry,venv,.venv,libs"
